test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/ablation_o3_r50/mutants/13/result.txt
./test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/ablation_o3_r50/mutants/13/Solution.java:23: error: unreachable statement
        for (int start = 0; false; start++) {
                                            ^
1 error
